@@ -3,6 +3,18 @@
 	* test/demo/act/ustack-size.*: New test, ustack() with a size
 	argument.
 
+	* libproc/Pcontrol.c (Pwait_internal): Immediately return if
+	stopped at a breakpoint.
+	(Puntrace): Reset ptrace_halted before calling Pwait() (which may
+	recurse back into Ptrace()).
+	(bkpt_handle_start): Set bkpt_halted before calling the handler;
+	unset it if the handler returns PS_RUN.
+	* libproc/rtld_db.c (rd_ldso_consistent_begin): Do nothing if
+	already halted at a breakpoint: if inconsistent, return EDEADLK.
+	(rd_ldso_nonzero_lmid_consistent_begin): Likewise.
+	(rd_ldso_consistent_end): Note that calls from inside a breakpoint
+	handler do nothing.
+
 2013-06-20  Nick Alcock  <nick.alcock@oracle.com>
 
 	Waitfd support.
